--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,12 @@ VERSION 7.0.0
     - New setup function.
     - Size limit for stored backups.
     - Automate clean up of old backups.
+
 VERSION 7.0.1
 +  Fixed
     - View log, journalctl: wrong name.
+    
+VERSION 7.0.2
++  Fixed
+    - journalctl -t -u unit-name
+    - service files set to 644
